2007-02-05  Ya-Chau Yang <a8850607@stmail.fju.edu.tw> 
            Savin Zlobec <savinz@users.sourceforge.net>

	* src/fatfs_supp.c: Fixed FAT32 cluster handling in
	fatfs_delete_file and fatfs_rename_file.

2007-01-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fatfs1.c: Fixed the format string to diag_printf()
	to remove compiler warnings.

2006-08-04  Paul Fine  <pfine@dtccom.com>
            Andrew Lunn <andrew.lunn@ascom.ch>
	
	* src/fats.c: Added functionality to the fatfs_getinfo() function
	to return disk usage information about the filesystem, making this
	information accessible through the cyg_fs_getinfo() interface.
	* tests/fatfs1.c: Added code to test the disk usage.
	
2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fatfs_supp.c: Correct types to remove compiler warnings.

2005-06-07  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c: lseek returned EEOF when at the end of the
	file rather than the current position. 

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fatfs1.c: Fixed various compiler warnings about types passed to
	diag_printf().

2005-01-18  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c:
	Fixed FAT12/16 root dir size checking in read_next_raw_dentry - 
	reported by Stephane Royo.

2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to fatfs1.c. eCos test names should be
	unique.
	* cdl/fatfs.cdl: Build the renamed test.

2004-11-14  Jani Monoses <jani@iv.ro>

	* test/fileio1.c: Start the test using main, not via a
	thread. This makes is more uniform with the other fileio1 tests.
	
2004-11-11  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c: fixed typos in TRACE statements

2004-10-23  David Brennan  <eCos@brennanhome.com>

	* tests/fileio1.c: fixed check for return value for attribute
	tests.

2004-10-17  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c:
	* src/fatfs_supp.c:
	* include/fatfs.h (NEW):
	* tests/fileio1.c: